# ROSprojects

./: .gitignore  Dockerfile
Arduino_ROS/teste_rosserial1/: teste_rosserial1.ino
GUI_ws/: GUI_ws.code-workspace
How to - como fazer - tutoriais/: Como configurar ip estatico  Como usar o ros com o docker.txt  como configurar aplicação teste - jkp robot - arduino teste
Projeto1_6DOF_Adapt/: PIBITI - Projeto 02 - Projeto_de_Pesquisa_PIBITI_versao_2022.docx  README.MD
Projeto1_6DOF_Adapt/Arquivos STL/: Robot Tangs - Arm1.stl  Robot Tangs - Arm2v3.stl  Robot Tangs - Arm3.stl  Robot Tangs - Grip Link.stl  Robot Tangs - Gripper.stl  Robot Tangs - Waist.stl  Robot Tangs - base.stl  Robot Tangs - gear1.stl  Robot Tangs - gear2.stl  Robot tangs - 3D print set1.stl  (+1 more)
Projeto2_6DOF_ROS/: REAME.MD  scad
ROS tutorials/: READ.ME
RosTests/catkin_ws/src/arduino_control_tutorials/: CMakeLists.txt  README.md  arduino_control_tutorials.code-workspace  package.xml
RosTests/catkin_ws/src/arduino_control_tutorials/How to - como fazer - tutoriais/: como instalar o gazebo integrado ao ROS
RosTests/catkin_ws/src/arduino_control_tutorials/arduino/arduino_board/: arduino_board.ino
RosTests/catkin_ws/src/arduino_control_tutorials/arduino/arduino_board/ros_lib/arduino_control_tutorials/: Ardubot.h
RosTests/catkin_ws/src/arduino_control_tutorials/arduino/arduino_board/ros_lib/jkprobot/: Ardubot.h
RosTests/catkin_ws/src/arduino_control_tutorials/msg/: Ardubot_v1.msg
RosTests/catkin_ws/src/arduino_control_tutorials/src/: jpk.py  robo_gui.py  ros_gui.kv
(+365 files in other folders)
